--- a/.pylintrc
+++ b/.pylintrc
@@ -238,7 +238,7 @@ contextmanager-decorators=contextlib.contextmanager
 # List of members which are set dynamically and missed by pylint inference
 # system, and so shouldn't trigger E1101 when accessed. Python regular
 # expressions are accepted.
-generated-members=torch.*, numpy.*, scipy.*
+generated-members=torch.*, numpy.*, scipy.*, ray.*,
 
 # Tells whether missing members accessed in mixin class should be ignored. A
 # mixin class is detected if its name ends with "mixin" (case insensitive).
