--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install pylint pytest flake8 pylint_quotes numpy==1.18.1 opencv-python==4.1.2.30 tqdm==4.42.1 pandas==1.0.1 arrayqueues==1.2.0b0 
+        python -m pip install pylint pytest flake8 pylint_quotes numpy==1.18.1 opencv-python==4.1.2.30 tqdm==4.42.1 pandas==1.0.1 arrayqueues==1.2.0b0 timing==0.4.0 ray
         python -m pip install -e .
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Lint with flake8
